Consume indice ocds py

--- a/portalocdspy_frontend/templates/inicio/inicio.html
+++ b/portalocdspy_frontend/templates/inicio/inicio.html
@@ -41,7 +41,7 @@
          </div>
          <div class="row">
             <h1 class="tituloInicio">
-               Busca, explora y visualiza las contrataciones <br>de las instituciones del gobierno de Honduras
+               Busca, explora y visualiza las contrataciones <br>de las instituciones del gobierno Paraguayo
             </h1>
          </div>
 
