--- a/portalocdspy_frontend/templates/nav.html
+++ b/portalocdspy_frontend/templates/nav.html
@@ -12,13 +12,12 @@
          <li class="nav-item {% if '/' == request.path %}active{% endif %}">
             <a class="nav-link transicion"  href="/">Inicio <span class="sr-only">(current)</span> </a>
          </li>
+         <li class="nav-item {% if '/visualizaciones' in request.path %}active{% endif %}">
+            <a class="nav-link transicion"  href="/visualizaciones">Visualizaciones</a>
+         </li>
          <li class="nav-item {% if '/descargas' in request.path %}active{% endif %}">
             <a class="nav-link transicion"  href="/descargas">Descargas</a>
          </li>
-         <!--
-         <li class="nav-item {% if '/acerca' in request.path %}active{% endif %}">
-               <a class="nav-link transicion"  href="/acerca">Acerca</a>
-         </li>-->
          <li class="nav-item {% if '/busqueda' in request.path %}active{% endif %}">
             <a class="nav-link transicion"  href="/busqueda?term=&metodo=proceso&pagina=1">Contrataciones</a>
          </li>
