modificaciones para que carguen los contratos y que se vean los compradores

--- a/portalocdspy_frontend/templates/busqueda/busqueda.html
+++ b/portalocdspy_frontend/templates/busqueda/busqueda.html
@@ -145,12 +145,6 @@
                               <a href="javascript:void(0)" id="opcionContratos" name="metodoBusqueda" toolTexto="Buscar en Contratos Provenientes de Sistemas de ONCAE" metodo="contrato"  class="btn btn-primary fondoColorSecundario {% if 'contrato' == request.GET.metodo %}activo{% endif %}"><span>Contratos</span></a>
                                </div>
                      </div>
-                     <div>
-                        <p>
-                           {% if 'proceso' == request.GET.metodo %}<b class="textoColorGris">* Buscar en Procesos de Contratación de HonduCompras 1.0</b>{% endif %}
-                           {% if 'contrato' == request.GET.metodo %}<b class="textoColorGris">* Buscar en Contratos de HonduCompras 1.0 - Módulo de Difusión de Compras y Contrataciones, Módulo de Difusión Directa de Contratos y Catálogo Electrónico.</b>{% endif %}
-                        </p>
-                     </div>
                  
                </div>
             </div>
@@ -181,7 +175,7 @@
                                  <i class="fas fa-times"></i>
                               </div>
                               <div class="etiquetaFiltro">
-                                 HNL
+                                 PYG
                                  <i class="fas fa-times"></i>
                               </div>
                            </div>
