--- a/portalocdspy_frontend/templates/indicadoresProcesosContratacion/indicadoresProcesosContratacion.html
+++ b/portalocdspy_frontend/templates/indicadoresProcesosContratacion/indicadoresProcesosContratacion.html
@@ -185,7 +185,7 @@
                               <div class="grafico minAlto_400" id="CantidadContratosTipoContrato"  style="height: 400px"></div>
                               <div>
                                  <p class="textoColorGrisNormal" style="font-size: 8pt;">
-                                    <b >Fuente de Datos:</b> HonduCompras 1.0 - Módulo de Difusión de Compras y Contrataciones. Módulo de Difusión Directa de Contratos. Catálogo Electrónico.
+                                    <b >Fuente de Datos:</b> DNCP (Direccion Nacional de Contrataciones Publicas).
                                  </p>
                               </div>
                               </div>
@@ -200,7 +200,7 @@
                                                       <div class="grafico minAlto_400" id="MontoContratosTipoContrato"  style="height: 400px"></div>
                                                       <div>
                                                          <p class="textoColorGrisNormal" style="font-size: 8pt;">
-                                                            <b >Fuente de Datos:</b> HonduCompras 1.0 - Módulo de Difusión de Compras y Contrataciones. Módulo de Difusión Directa de Contratos. Catálogo Electrónico.
+                                                                                                <b >Fuente de Datos:</b> DNCP (Direccion Nacional de Contrataciones Publicas).
                                                          </p>
                                                       </div>
                                                       </div>
@@ -216,7 +216,7 @@
                                                          <div class="grafico" id="top10InstitucionesMontos"  style="height: 700px"></div>
                                                          <div>
                                                             <p class="textoColorGrisNormal" style="font-size: 8pt;">
-                                                               <b >Fuente de Datos:</b> HonduCompras 1.0 - Módulo de Difusión de Compras y Contrataciones. Módulo de Difusión Directa de Contratos. Catálogo Electrónico.
+                                                                                                   <b >Fuente de Datos:</b> DNCP (Direccion Nacional de Contrataciones Publicas).
                                                             </p>
                                                          </div>
                                                       </div>
@@ -246,7 +246,7 @@
                                                             <div class="grafico" id="montoCompraConjunta"  style="height: 800px"></div>
                                                             <div>
                                                                <p class="textoColorGrisNormal" style="font-size: 8pt;">
-                                                                  <b >Fuente de Datos:</b> Catálogo Electrónico.
+                                                                                                     <b >Fuente de Datos:</b> DNCP (Direccion Nacional de Contrataciones Publicas).
                                                                </p>
                                                             </div>
                                                          </div>
@@ -264,7 +264,7 @@
                         <div class="grafico" id="modalidadMontoCantidad"  style="height: 600px"></div>
                         <div>
                            <p class="textoColorGrisNormal" style="font-size: 8pt;">
-                              <b >Fuente de Datos:</b> HonduCompras 1.0 - Módulo de Difusión de Compras y Contrataciones. Módulo de Difusión Directa de Contratos. Catálogo Electrónico.
+                                                                 <b >Fuente de Datos:</b> DNCP (Direccion Nacional de Contrataciones Publicas).
                            </p>
                         </div>
                      </div>
