--- a/portalocdspy_frontend/templates/tableroProcesosContratacion/tableroProcesosContratacion.html
+++ b/portalocdspy_frontend/templates/tableroProcesosContratacion/tableroProcesosContratacion.html
@@ -378,25 +378,25 @@
                            <div class="row">
                                  <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12">
                                     <div class="pt-2 pb-2">
-                                    <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosPromedio">0</span> <span class="textoColorPrimario">HNL</span></div>
+                                    <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosPromedio">0</span> <span class="textoColorPrimario">PYG</span></div>
                                     <div class="titularColor textoAlineadoDerecha textoColorGris" >Promedio Mensual</div>
                                     </div>
                                  </div>
                                  <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12">
                                        <div class="pt-2 pb-2">
-                                       <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosMayor">0</span> <span class="textoColorPrimario">HNL</span></div>
+                                       <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosMayor">0</span> <span class="textoColorPrimario">PYG</span></div>
                                        <div class="titularColor textoAlineadoDerecha textoColorGris" >Mayor Mensual</div>
                                        </div>
                                     </div>
                                     <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12">
                                           <div class="pt-2 pb-2">
-                                          <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosMenor">0</span> <span class="textoColorPrimario">HNL</span></div>
+                                          <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosMenor">0</span> <span class="textoColorPrimario">PYG</span></div>
                                           <div class="titularColor textoAlineadoDerecha textoColorGris" >Menor Mensual</div>
                                           </div>
                                        </div>
                                        <div class="col-md-3 col-lg-3 col-sm-3 col-xs-12">
                                              <div class="pt-2 pb-2">
-                                             <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosTotal">0</span> <span class="textoColorPrimario">HNL</span></div>
+                                             <div class="titularColor textoAlineadoDerecha textoColorGris" style="font-size: 20px;line-height: 20px"><span data-speed="300" data-refresh-interval="20" data-from="0" data-to="0" class="conteo moneda" id="MontoContratosTotal">0</span> <span class="textoColorPrimario">PYG</span></div>
                                              <div class="titularColor textoAlineadoDerecha textoColorGris" >Total en el Año</div>
                                              </div>
                                           </div>
