--- a/portalocdspy_frontend/templates/visualizaciones/visualizaciones.html
+++ b/portalocdspy_frontend/templates/visualizaciones/visualizaciones.html
@@ -27,9 +27,9 @@
                   <h5 class="textoColorPrimario titularColor textoColorGrisNormal">
                      Tablero de Procesos de Contratación
                   </h5>
-                  <i>ONCAE</i>
+                  <i>DNCP</i>
                   <p class="textoAlineadoJustificado">
-                     Estadísticas relacionadas con los procesos de contratación de las contrataciones en Honduras. – Incluyendo todas las normativas.
+                     Estadísticas relacionadas con los procesos de contratación de las contrataciones en Paraguay.
                   </p>
                   <div class="enlacesVisualizacion"><a href="javascript:AccederVisualizacion('/tableroProcesosContratacion/')" class="botonGeneral fondoColorSecundario ">Visualizar</a>
                      <a href="javascript:ObtenerEnlaceRed('twitter','/tableroProcesosContratacion/')" class="compartirEnlace twitter"><i class="fab fa-twitter "></i></a>
@@ -53,9 +53,9 @@
                   <h5 class="textoColorPrimario titularColor textoColorGrisNormal">
                      Estadísticas Descriptivas de Procesos de Contratación
                   </h5>
-                  <i>ONCAE</i>
+                  <i>DNCP</i>
                   <p class="textoAlineadoJustificado">
-                     Estadísticas descriptivas de los procesos de contratación de las contrataciones en Honduras.  – Incluyendo todas las normativas.
+                     Estadísticas descriptivas de los procesos de contratación de las contrataciones en Paraguay.
                   </p>
                   <div class="enlacesVisualizacion"><a href="javascript:AccederVisualizacion('/indicadoresProcesosContratacion/')" class="botonGeneral fondoColorSecundario ">Visualizar</a>
                      <a href="javascript:ObtenerEnlaceRed('twitter','/indicadoresProcesosContratacion/')" class="compartirEnlace twitter"><i class="fab fa-twitter "></i></a>
