Cambios en el front, y listado de redflags en los resultados

--- a/portalocdspy_frontend/templates/inicio/inicio.html
+++ b/portalocdspy_frontend/templates/inicio/inicio.html
@@ -22,10 +22,6 @@
                            <input type="radio" id="metodoProceso" name="selector" checked>
                            <label for="metodoProceso" class="etiquetaOpcionFiltroBusqueda textoColorPrimario" >Procesos de Contratación</label>
                         </div>
-                        <div class="OpcionFiltroBusqueda">
-                           <input type="radio" id="metodoContrato" name="selector" >
-                           <label for="metodoContrato" class="etiquetaOpcionFiltroBusqueda textoColorPrimario">Contratos</label>
-                        </div>
                      </div>
                   </div>
                </div>
@@ -37,7 +33,7 @@
          </div>
          <div class="row">
             <h1 class="tituloInicio">
-               Busca, explora y visualiza las contrataciones <br>de las instituciones del gobierno Paraguayo
+               Busca, explora y visualiza las contrataciones <br>de las instituciones del gobierno Paraguayo y sus banderas rojas
             </h1>
          </div>
 
