--- a/portalocdspy_frontend/templates/footer.html
+++ b/portalocdspy_frontend/templates/footer.html
@@ -1,26 +1,42 @@
 {% load static %}
 <!-- PIE DE PAGINA -->
       <footer>
-            <div class=" py-3 textoColorBlanco fondoColorBlanco container-fluid">
-                  <div class="row logosEntidades">
-                     <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-                        <a href=""><img class="transicion" src="{% static 'img/logos/logo_nacional_guarani.png' %}" alt="Logo del Banco Mundial"></a>
-
-                     </div>
-                     <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-                           <a href=""><img class="transicion" src="{% static 'img/logos/logo_py_gente_guarani.png' %}" alt="Logo Paraguay"></a>
-                           
-                    </div>
-                  </div>
-               </div>  
          <div class="container-fluid text-center text-md-left fondoColorGrisOscuro pt-5">
                
             <div class="row pl-5 pr-5 pb-2 pt-2">
                <div class="col-md-3 mt-md-0 mt-3">
-                  <h5 class="text-uppercase textoColorBlanco">Portal de Contrataciones Abiertas de Paraguay </h5>
-                  <p class="textoColorGris textoAlineadoJustificado">Portal para realizar el seguimiento de los procesos de contratación y para obtener conocimientos sobre lo que ocurre con ellos en Paraguay. </p>
+                  <h5 class="text-uppercase textoColorBlanco">Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay </h5>
+                  <p class="textoColorGris textoAlineadoJustificado">Proyecto Final de Grado desarrollado por Alumnos de la Facultad Politecnica para realizar el seguimiento de los procesos de contratación y obtener conocimientos sobre los mismos Paraguay. </p>
                </div>
-               <hr class="clearfix w-100 d-md-none pb-3">
+                <hr class="clearfix w-100 d-md-none pb-3">
+                 <div class=" col-md-3 mb-md-0 mb-3">
+                   <h5 class="text-uppercase textoColorBlanco">Información</h5>
+                   <ul class="list-unstyled textoColorBlanco">
+                      <li>
+                         <a href="/acerca">Acerca de</a>
+                      </li>
+                      <li>
+                         <a href="/preguntas">Red Flags</a>
+                      </li>
+                      <li>
+                           <a href="http://standard.open-contracting.org/latest/es/">
+                           Estándar de Datos de Contrataciones Abiertas</a>
+                      </li>
+                   </ul>
+                </div>
+                <div class="col-md-3 mb-md-0 mb-3">
+                  <h5 class="text-uppercase textoColorBlanco"></h5>
+                  <ul class="list-unstyled textoColorBlanco">
+                     <li>
+                        <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">licencia de Creative Commons Reconocimiento 4.0 Internacional</a>.
+                     </li>
+                  </ul>
+                  <ul class="list-unstyled textoColorBlanco">
+                     <li>
+                        <a rel="code" href="https://gitlab.com/matirivas1995/ocdspy_backend"><i class="fab fa-github"></i> Enlace al código fuente del Portal</a>.
+                     </li>
+                  </ul>
+               </div>
             </div>
          </div>
       </footer>
