Pagina acerca de

--- a/portalocdspy_frontend/templates/acerca/acerca.html
+++ b/portalocdspy_frontend/templates/acerca/acerca.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_content %}
-<title>Portal de Contrataciones Abiertas de Honduras - Acerca</title>
+<title>Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay - Acerca</title>
 {% endblock %}
 
 {% load static %}
@@ -10,13 +10,46 @@
 <div class="container-fluid fondoColorPrimario fondoPrincipalPagina tamanoMinimo">
 <div class="container">
    <div class="row pb-2">
-      <div class="col-md-12 mt-5 mb-5"><h1 class="textoColorBlanco textoTitular1Grueso textoAlineadoCentrado">Acerca del Portal de Contrataciones Abiertas de Honduras</h1></div>
+      <div class="col-md-12 mt-5 mb-5"><h1 class="textoColorBlanco textoTitular1Grueso textoAlineadoCentrado">Acerca del Proyecto</h1></div>
+     <div class="col-md-12">
+         <p class="textoColorBlanco textoAlineadoJustificado textoParrafoResaltado">
+            Banderas Rojas en Contrataciones Publicas del Paraguay, es un portal desarrollado por los alumnos Elias Mora y Matias Rivas, como parte del proyecto final de grado
+             correspondiente a la carrera Ingenieria Informatica de la Universidad Nacional de Asuncion, bajo la tutoria de los Docentes Juan Pane y Julio Paciello
+         </p>
+      </div>
+     <div class="col-md-12">
+         <div class="divisorTextos fondoColorBlanco mt-3 mb-4"></div>
+      </div>
+     <div class="col-md-12">
+         <h4 class="textoColorBlanco textoTitular2Grueso">
+               ¿En que consiste el Proyecto?
+         </h4>
+         <p class="textoColorBlanco textoAlineadoJustificado textoParrafoResaltado">
+             Consiste en la deteccion de los indicadores de corrupcion, tambien denominados banderas rojas, en los procesos de contrataciones publicas del Paraguay,
+             para tal efecto se utiliza un motor de reglas que contiene cada uno de estos indicadores.
+         </p>
+      </div>
+             <div class="col-md-12">
+         <div class="divisorTextos fondoColorBlanco mt-3 mb-4"></div>
+      </div>
+      <div class="col-md-12">
+         <h4 class="textoColorBlanco textoTitular2Grueso">
+               ¿De donde provienen los datos?
+         </h4>
+         <p class="textoColorBlanco textoAlineadoJustificado textoParrafoResaltado">
+             Los datos son extraidos directamente de la API expuesta por Direccion Nacional de Contrataciones Publicas <a href="https://www.contrataciones.gov.py/datos/" class="textoColorBlanco enlaceFondoColor">(DNCP)</a>,
+             los mismos son actulizados diariamente y el motor de reglas implementado detecta si estos cumplen con algun indicador declarado.
+         </p>
+      </div>
+      <div class="col-md-12">
+         <div class="divisorTextos fondoColorBlanco mt-3 mb-4"></div>
+      </div>
       <div class="col-md-12">
          <h4 class="textoColorBlanco textoTitular2Grueso">
                ¿Que son los datos abiertos?
          </h4>
          <p class="textoColorBlanco textoAlineadoJustificado textoParrafoResaltado">
-               Son datos que pueden ser libremente usados, reusados y redistribuidos por cualquiera, sujeto solamente, a lo sumo, a requisitos de atribución y redistribución con la misma licencia. Fuente: Open Knowledge International.
+               Son datos que pueden ser libremente usados, reusados y redistribuidos por cualquiera, sujeto solamente, a lo sumo, a requisitos de atribución y redistribución con la misma licencia - Open Knowledge Foundation.
          </p>
       </div>
       <div class="col-md-12">
@@ -24,7 +57,7 @@
       </div>
       <div class="col-md-12">
             <h4 class="textoColorBlanco textoTitular2Grueso">
-                  ¿Que es el  Estándar de Datos de las Contrataciones Abiertas (EDCA)?
+                  ¿Que es el  Estándar de Datos de las Contrataciones Abiertas (OCDS)?
             </h4>
             <p class="textoColorBlanco textoAlineadoJustificado textoParrafoResaltado">
                   El Estándar de Datos para las Contrataciones Abiertas (OCDS por sus siglas en inglés) permite la divulgación de datos y documentos de todas las etapas del proceso de contratación mediante la definición de un modelo de datos común. Se creó para apoyar a las organizaciones a aumentar la transparencia de la contratación y permitir un análisis más profundo de los datos de contrataciones por una amplia gama de usuarios.
@@ -32,20 +65,6 @@
                   
             </p>
          </div>
-         <div class="col-md-12">
-               <div class="divisorTextos fondoColorBlanco mt-3 mb-4"></div>
-            </div>
-            <div class="col-md-12">
-                  <h4 class="textoColorBlanco textoTitular2Grueso">
-                        ¿Como surge el Portal de Contrataciones Abiertas de Honduras?
-                  </h4>
-                  <p class="textoColorBlanco textoAlineadoJustificado textoParrafoResaltado">
-                        El portal nace como un proyecto del <a href="https://www.worldbank.org/" class="textoColorBlanco enlaceFondoColor">Banco Mundial</a>  con fondos de <a href="https://www.usaid.gov/honduras" class="textoColorBlanco enlaceFondoColor">USAID</a>, en conjunto con el trabajo realizado por el <a href="https://www.presidencia.gob.hn/" class="textoColorBlanco enlaceFondoColor">Gobierno de Honduras</a>  y sus diversas instituciones.
-                        Con la finalidad de fomentar la transparencia y hacer llegar a las personas la Información de los procesos de contratación del estado de Honduras.
-                     
-                        
-                  </p>
-               </div>
    </div>
    
 </div>
