--- a/portalocdspy_frontend/templates/inicio/inicio.html
+++ b/portalocdspy_frontend/templates/inicio/inicio.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_content %}
-<title>Portal de Contrataciones Abiertas de Honduras - Inicio</title>
+<title>Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay - Inicio</title>
 {% endblock %}
 
 {% block container %}
