--- a/portalocdspy_frontend/templates/busqueda/busqueda.html
+++ b/portalocdspy_frontend/templates/busqueda/busqueda.html
@@ -280,7 +280,11 @@
                      
                   </div>
                   <div class="col-12 col-sm-6 col-md-6 textoAlineadoDerecha">
-                     <h4 class="descargaIconos enLinea"><span  class="textoColorGris textoAlineadoDerecha p-1 cursorMano transicion" id="descargaJSON"><i class="fas fa-file-download"></i>&nbsp;.JSON</span><span class="textoColorGris textoAlineadoDerecha p-1 cursorMano transicion"  id="descargaCSV"><i class="fas fa-file-download"></i>&nbsp;.CSV</span><span class="textoColorGris textoAlineadoDerecha p-1 cursorMano transicion"  id="descargaXLSX"><i class="fas fa-file-download"></i>&nbsp;.XLSX</span></h4>
+                     <h4 class="descargaIconos enLinea">
+                         <span  class="textoColorGris textoAlineadoDerecha p-1 cursorMano transicion" id="descargaJSON">
+                             <i class="fas fa-file-download"></i>&nbsp;.JSON
+                         </span>
+                     </h4>
                      
                      <h4 class="enLinea mb-0 enLinea alineadoArriba" onclick="location.href='/preguntas'">
                            <div class="textoAlineadoCentrado cursorMano botonAyuda transicion toolTip" id="informacionTipoDatos" toolTexto="¿Que son estos tipos de datos?">
