--- a/portalocdspy_frontend/templates/base.html
+++ b/portalocdspy_frontend/templates/base.html
@@ -6,8 +6,8 @@
       {% block head_content %}{% endblock %}
 
       {% load static %}
-      <meta name="description" content="Portal del Estándar de Datos de Contrataciones Abiertas en Honduras"/>
-      <meta name="keywords" content="OCDS, EDCA, Honduras, ONCAE, Contrataciones, Abiertas"/>
+      <meta name="description" content="Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay"/>
+      <meta name="keywords" content="OCDS, EDCA, Paraguay, DNCP, Contrataciones, Abiertas, Red Flags, Banderas Rojas"/>
       <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
       <link rel="stylesheet" href="{% static 'plugins/bootstrap-4.3.1/css/bootstrap.min.css' %}">
       {% block head_style %}{% endblock %}
