--- a/portalocdspy_frontend/templates/busqueda/busqueda.html
+++ b/portalocdspy_frontend/templates/busqueda/busqueda.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_content %}
-<title>Portal de Contrataciones Abiertas - Busqueda</title>
+<title>Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay - Busqueda</title>
 {% endblock %}
 
 
