--- a/portalocdspy_frontend/templates/comprador/comprador.html
+++ b/portalocdspy_frontend/templates/comprador/comprador.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block head_content %}
-<title>Portal de Contrataciones Abiertas de Honduras - Comprador</title>
+<title>Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay - Comprador</title>
 {% endblock %} {% load static %} {% block head_style %}
 <link rel="stylesheet" href="{% static 'plugins/jquery-ui-1.12.1/jquery-ui.min.css' %}"> {% endblock %} {% block container %}
 <div class="container-fluid tamanoMinimo" style="max-width: 1600px;position: relative;">
