--- a/portalocdspy_frontend/templates/preguntas/preguntas.html
+++ b/portalocdspy_frontend/templates/preguntas/preguntas.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_content %}
-<title>Portal de Contrataciones Abiertas de Honduras - Preguntas</title>
+<title>Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay - Preguntas</title>
 {% endblock %}
 
 {% load static %}
