--- a/portalocdspy_frontend/templates/compradores/compradores.html
+++ b/portalocdspy_frontend/templates/compradores/compradores.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head_content %}
-<title>Portal de Contrataciones Abiertas de Honduras - Compradores</title>
+<title>Portal de Banderas Rojas en Contrataciones Abiertas del Paraguay - Compradores</title>
 {% endblock %}
 
 {% load static %}
