Contador de redflags en pagina de inicio

--- a/portalocdspy_frontend/templates/inicio/inicio.html
+++ b/portalocdspy_frontend/templates/inicio/inicio.html
@@ -43,22 +43,27 @@
                <div class="divisorNumeroTitularEstadistico fondoColorBlanco"></div>
                <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1" >Proveedores</div>
             </div>
-            <div class="col-6 col-sm-2 col-md-2 col-lg-2 p-2">
-                  <div class="numeroTitularEstadistico textoColorBlanco tiempo" data-speed="1000" data-refresh-interval="20" data-from="0" data-to="0" id="contratos" >0</div>
+             <div class="col-12 col-sm-2 col-md-2 col-lg-2 p-2">
+                  <div class="numeroTitularEstadistico textoColorBlanco tiempo" data-speed="1000" data-refresh-interval="20" data-from="0" data-to="0" id="compradores">0</div>
                   <div class="divisorNumeroTitularEstadistico fondoColorBlanco"></div>
-                  <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1" >Contratos</div>
-               </div>
+                  <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1"  >Compradores</div>
+            </div>
             <div class="col-6 col-sm-2 col-md-2 col-lg-2 p-2">
                <div class="numeroTitularEstadistico textoColorBlanco tiempo" data-speed="1000" data-refresh-interval="20" data-from="0" data-to="0" id="procesos">0</div>
                <div class="divisorNumeroTitularEstadistico fondoColorBlanco"></div>
                <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1" >Procesos <span> de Contratación</span></div>
             </div>
-            
-            <div class="col-12 col-sm-2 col-md-2 col-lg-2 p-2">
-                  <div class="numeroTitularEstadistico textoColorBlanco tiempo" data-speed="1000" data-refresh-interval="20" data-from="0" data-to="0" id="compradores">0</div>
-                  <div class="divisorNumeroTitularEstadistico fondoColorBlanco"></div>
-                  <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1"  >Compradores</div>
-               </div>
+             <div class="col-6 col-sm-2 col-md-2 col-lg-2 p-2">
+               <div class="numeroTitularEstadistico textoColorBlanco tiempo" data-speed="1000" data-refresh-interval="20" data-from="0" data-to="0" id="uniqueRedFlags">0</div>
+               <div class="divisorNumeroTitularEstadistico fondoColorBlanco"></div>
+               <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1" >Procesos <span> de Contratación</span> con Banderas Rojas</div>
+            </div>
+             <div class="col-6 col-sm-2 col-md-2 col-lg-2 p-2">
+               <div class="numeroTitularEstadistico textoColorBlanco tiempo" data-speed="1000" data-refresh-interval="20" data-from="0" data-to="0" id="redFlags">0</div>
+               <div class="divisorNumeroTitularEstadistico fondoColorBlanco"></div>
+               <div class="descripcionNumeroTitularEstadistico textoColorBlanco" style="line-height: 1" >Banderas Rojas detectadas</div>
+            </div>
+
          </div>
       </div>
       <img src="{% static 'img/landing/iconosEdca.svg' %}" class="fondoIconos" style="display:none">
