Selector de archivos acepta solamente spreadsheets

--- a/portalocdspy_frontend/templates/admin/admin.html
+++ b/portalocdspy_frontend/templates/admin/admin.html
@@ -17,7 +17,8 @@
          </h4>
          <form method="post" enctype="multipart/form-data">
              {% csrf_token %}
-             <input type="file" name="document">
+            <input style="color: #FFFFFF;" type="file" name="document"
+               accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" required>
              <button type="submit" class="etiquetaFiltro contenidoTablaCaracteristicas">Subir Excel</button>
          </form>
       </div>
