--- a/portalocdspy_frontend/templates/nav.html
+++ b/portalocdspy_frontend/templates/nav.html
@@ -2,7 +2,7 @@
 <!-- BARRA DE NAVEGACION -->
 <nav class="navbar navbar-expand-lg  navbar-dark fixed-top  fondoColorPrimario">
    <a class="navbar-brand" href="/">
-   <img src="{% static 'img/logos/logo-portal1.png' %}" style="height: 320px; width:  50px " alt="Logo Portal de Contrataciones Abiertas de Honduras">
+   <img src="{% static 'img/logos/logo-portal1.png' %}" style="width: 320px; height:  50px " alt="Logo Portal de Contrataciones Abiertas de Honduras">
    </a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barraNavegacionPortal" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
