--- a/portalocdspy_frontend/templates/footer.html
+++ b/portalocdspy_frontend/templates/footer.html
@@ -28,7 +28,7 @@
                   <h5 class="text-uppercase textoColorBlanco"></h5>
                   <ul class="list-unstyled textoColorBlanco">
                      <li>
-                        <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0; height: 88px; width: 31px" src="{% static 'img/cc.png' %}" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">licencia de Creative Commons Reconocimiento 4.0 Internacional</a>.
+                        <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0; width: 88px; height: 31px" src="{% static 'img/cc.png' %}" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">licencia de Creative Commons Reconocimiento 4.0 Internacional</a>.
                      </li>
                   </ul>
                   <ul class="list-unstyled textoColorBlanco">
