cdn y archivos estaticos

--- a/portalocdspy_frontend/templates/base.html
+++ b/portalocdspy_frontend/templates/base.html
@@ -43,9 +43,9 @@
       <script type="text/javascript" src="{% static 'plugins/jquery-3.4.1/jquery-3.4.1.min.js' %}"></script>
       <script type="text/javascript" src="{% static 'plugins/bootstrap-4.3.1/js/bootstrap.min.js' %}"></script>
       <script type="text/javascript" src="{% static 'plugins/countto/jquery.countTo.js' %}"></script>
-      <script type="text/javascript" src="{% static 'plugins/popper-1.15.0/popper.min.js' %}"></script>
-      <script type="text/javascript" src="{% static 'plugins/tippy-4.3.1/index.all.min.js' %}"></script>
-      <script type="text/javascript" src="{% static 'plugins/fileSaver-2.0.2/FileSaver.min.js' %}"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha512-ENNzUGgCCCuxEhCSKU4qx89WlQJKKsnOPl0Kg/cbj+kGw9m3NsZn7Lulo0DXPihPHPcQ85OhYU0FG/TuIayNhw==" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/tippy.js/3.4.1/tippy.all.min.js" integrity="sha512-CKHmTkXWf4VNBtMzi5Fkz2yz4aWfksVTYs42jZY+2ctYhz9L1HA2WJhkn9tBJSlOXLbDplwbaoJEH7fZRmZJhQ==" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.2/FileSaver.min.js" integrity="sha512-k8F8QynmFNURwbUJC8drKA+fo3YfNvjqKzStdydD6au+MzvxBoRnxH8E31RJXwDY9DrnEiPhh9wBoDSIxhkyHQ==" crossorigin="anonymous"></script>
       <script type="text/javascript" src="{% static 'plugins/sheetJs-0.15.3/xlsx.full.min.js' %}"></script>
       <script type="text/javascript" src="{% static 'plugins/alerty-0.0.1/alerty.min.js' %}"></script>
       <script type="text/javascript" src="{% static 'js/general.js' %}"></script>
